Install oauth2 plugin with keystone-docker

--- a/keystone.conf
+++ b/keystone.conf
@@ -6,3 +6,10 @@ connection = sqlite:///keystone.db
 
 [token]
 provider = fernet
+
+[auth]
+# Default auth methods. (list value)
+methods=external,password,token,oauth2
+
+# The oauth2 plugin module (string value)
+oauth2=keystone.auth.plugins.oauth2.OAuth2
